@@ -1,40 +1,45 @@
 /*
- * Copyright 2013-2020 Signal Messenger, LLC
+ * Copyright 2013 Signal Messenger, LLC
  * SPDX-License-Identifier: AGPL-3.0-only
  */
 package org.whispersystems.websocket;
 
+import static java.util.Optional.ofNullable;
+
 import io.dropwizard.jersey.jackson.JacksonMessageBodyProvider;
-import org.eclipse.jetty.websocket.servlet.ServletUpgradeRequest;
-import org.eclipse.jetty.websocket.servlet.ServletUpgradeResponse;
-import org.eclipse.jetty.websocket.servlet.WebSocketCreator;
-import org.eclipse.jetty.websocket.servlet.WebSocketServlet;
-import org.eclipse.jetty.websocket.servlet.WebSocketServletFactory;
+import java.io.IOException;
+import java.security.Principal;
+import java.util.Optional;
+import javax.ws.rs.InternalServerErrorException;
+import org.apache.commons.lang3.StringUtils;
+import org.eclipse.jetty.websocket.server.JettyServerUpgradeRequest;
+import org.eclipse.jetty.websocket.server.JettyServerUpgradeResponse;
+import org.eclipse.jetty.websocket.server.JettyWebSocketCreator;
+import org.eclipse.jetty.websocket.server.JettyWebSocketServlet;
+import org.eclipse.jetty.websocket.server.JettyWebSocketServletFactory;
 import org.glassfish.jersey.server.ApplicationHandler;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.whispersystems.websocket.auth.AuthenticationException;
 import org.whispersystems.websocket.auth.WebSocketAuthenticator;
-import org.whispersystems.websocket.auth.WebSocketAuthenticator.AuthenticationResult;
 import org.whispersystems.websocket.auth.WebsocketAuthValueFactoryProvider;
+import org.whispersystems.websocket.configuration.WebSocketConfiguration;
 import org.whispersystems.websocket.session.WebSocketSessionContextValueFactoryProvider;
 import org.whispersystems.websocket.setup.WebSocketEnvironment;
 
-import java.io.IOException;
-import java.security.Principal;
-import java.util.Arrays;
-import java.util.Optional;
-
-import static java.util.Optional.ofNullable;
-
-public class WebSocketResourceProviderFactory<T extends Principal> extends WebSocketServlet implements WebSocketCreator {
+public class WebSocketResourceProviderFactory<T extends Principal> extends JettyWebSocketServlet implements
+    JettyWebSocketCreator {
 
   private static final Logger logger = LoggerFactory.getLogger(WebSocketResourceProviderFactory.class);
 
   private final WebSocketEnvironment<T> environment;
-  private final ApplicationHandler      jerseyApplicationHandler;
+  private final ApplicationHandler jerseyApplicationHandler;
+  private final WebSocketConfiguration configuration;
 
-  public WebSocketResourceProviderFactory(WebSocketEnvironment<T> environment, Class<T> principalClass) {
+  private final String remoteAddressPropertyName;
+
+  public WebSocketResourceProviderFactory(WebSocketEnvironment<T> environment, Class<T> principalClass,
+      WebSocketConfiguration configuration, String remoteAddressPropertyName) {
     this.environment = environment;
 
     environment.jersey().register(new WebSocketSessionContextValueFactoryProvider.Binder());
@@ -42,56 +47,59 @@ public class WebSocketResourceProviderFactory<T extends Principal> extends WebSo
     environment.jersey().register(new JacksonMessageBodyProvider(environment.getObjectMapper()));
 
     this.jerseyApplicationHandler = new ApplicationHandler(environment.jersey());
+
+    this.configuration = configuration;
+    this.remoteAddressPropertyName = remoteAddressPropertyName;
   }
 
   @Override
-  public Object createWebSocket(ServletUpgradeRequest request, ServletUpgradeResponse response) {
+  public Object createWebSocket(final JettyServerUpgradeRequest request, final JettyServerUpgradeResponse response) {
     try {
       Optional<WebSocketAuthenticator<T>> authenticator = Optional.ofNullable(environment.getAuthenticator());
-      T                                   authenticated = null;
 
+      final ReusableAuth<T> authenticated;
       if (authenticator.isPresent()) {
-        AuthenticationResult<T> authenticationResult = authenticator.get().authenticate(request);
+        authenticated = authenticator.get().authenticate(request);
 
-        if (authenticationResult.getUser().isEmpty() && authenticationResult.isRequired()) {
+        if (authenticated.invalidCredentialsProvided()) {
           response.sendForbidden("Unauthorized");
           return null;
-        } else {
-          authenticated = authenticationResult.getUser().orElse(null);
         }
+      } else {
+        authenticated = ReusableAuth.anonymous();
       }
 
-      return new WebSocketResourceProvider<T>(getRemoteAddress(request),
-                                              this.jerseyApplicationHandler,
-                                              this.environment.getRequestLog(),
-                                              authenticated,
-                                              this.environment.getMessageFactory(),
-                                              ofNullable(this.environment.getConnectListener()),
-                                              this.environment.getIdleTimeoutMillis());
+      return new WebSocketResourceProvider<>(getRemoteAddress(request),
+          remoteAddressPropertyName,
+          this.jerseyApplicationHandler,
+          this.environment.getRequestLog(),
+          authenticated,
+          this.environment.getMessageFactory(),
+          ofNullable(this.environment.getConnectListener()),
+          this.environment.getIdleTimeout());
     } catch (AuthenticationException | IOException e) {
       logger.warn("Authentication failure", e);
       try {
         response.sendError(500, "Failure");
-      } catch (IOException ex) {}
+      } catch (IOException ignored) {
+      }
       return null;
     }
   }
 
   @Override
-  public void configure(WebSocketServletFactory factory) {
+  public void configure(JettyWebSocketServletFactory factory) {
     factory.setCreator(this);
+    factory.setMaxBinaryMessageSize(configuration.getMaxBinaryMessageSize());
+    factory.setMaxTextMessageSize(configuration.getMaxTextMessageSize());
   }
 
-  private String getRemoteAddress(ServletUpgradeRequest request) {
-    String forwardedFor = request.getHeader("X-Forwarded-For");
-
-    if (forwardedFor == null || forwardedFor.isBlank()) {
-      return request.getRemoteAddress();
-    } else {
-      return Arrays.stream(forwardedFor.split(","))
-                   .map(String::trim)
-                   .reduce((a, b) -> b)
-                   .orElseThrow();
+  private String getRemoteAddress(JettyServerUpgradeRequest request) {
+    final String remoteAddress = (String) request.getHttpServletRequest().getAttribute(remoteAddressPropertyName);
+    if (StringUtils.isBlank(remoteAddress)) {
+      logger.error("Remote address property is not present");
+      throw new InternalServerErrorException();
     }
+    return remoteAddress;
   }
 }
